# EGame

./: .gitignore  .gitmodules  AddPlayerScene.cpp  AddPlayerScene.h  AddTask.cpp  AddTask.h  Avatar.cpp  Avatar.h  CMakeLists.txt  Dialog.cpp  Dialog.h  Game.cpp  MainScene.cpp  MainScene.h  Player.cpp  Player.h  SceneTasks.cpp  SceneTasks.h  Task.cpp  Task.h  TextButton.cpp  TextInput.cpp  TextInput.h  TextPanel.cpp  TextPanel.h  build.sh  flags.h  main.cpp  resources.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: private.xml
res/: data.xml  res.xml  sounds.xml
src/: Dialog.h  Game.cpp  Game.h  MainScene.cpp  MainScene.h  SceneTasks.h  SoundManager.cpp  SoundManager.h  Task.cpp  TextButton.cpp  TextButton.h  TextInput.h  TextPanel.h  base.h  flags.h  main.cpp  resources.cpp  resources.h
